# music-box-interactive

./: .gitignore  README.md  docker-compose-prod.yml  docker-compose.yml
.github/workflows/: auto_format.yml  build_deploy.yml  close_stale_issues.yml  pytest.yml  test.yml
backend/: README.md  docker-compose-prod.yml  package-lock.json  package.json  pyproject.toml
backend/docker/: Dockerfile  Dockerfile.api  Dockerfile.model_runner
backend/interactive/: rabbit_mq_model_runner.py
backend/interactive/api/: controller.py
backend/interactive/manage/: settings.py
backend/interactive/shared/: configuration_utils.py
deploy/kustomization/: backend-service.yaml  model-deploy.yaml  rabbitmq-service.yaml
deploy/kustomization/base/: backend-deploy.yaml  backend-service.yaml  frontend-deploy.yaml  frontend-service.yaml  ingress.yaml  kustomization.yaml  model-deploy.yaml  pvc.yaml  rabbitmq-deploy.yaml  rabbitmq-service.yaml
deploy/kustomization/overlays/devel/: kustomization.yaml
frontend/: .env.development  Dockerfile  README.md  package-lock.json  package.json
frontend/app/preload/: preload.js
frontend/src/components/Conditions/: ConditionTable.jsx
frontend/src/components/Home/: BehindTheMusic.jsx  Collaborators.jsx
frontend/src/components/Mechanism/: shared_properties.jsx
frontend/src/components/Plots/: FlowGraph.jsx  FlowPanel.jsx  LinePlot.jsx
frontend/src/controllers/: transformers.jsx
frontend/src/pages/: results.jsx
frontend/src/redux/reducers/: conditions.js  results.js
frontend/src/redux/selectors/: conditions.js  mechanism.js
frontend/test/: transformers.test.jsx
